--- a/src/index.scss
+++ b/src/index.scss
@@ -129,7 +129,7 @@ button {
    ═══════════════════════════════════════════════ */
 
 .window {
-    padding: 16px;
+    padding: 8px 16px 16px;
     background: var(--bg-root);
     height: 100%;
     display: flex;
